--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Kangna is here!!!</h1>
-    </div>
+    <div id="root"></div>
     <script type="module" src="./App.js"></script>
   </body>
 </html>
